Fixing remote compilation problem